SE HICIERON PEQUENAS MODIFICACIONES A LOS ESTILOS

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <img class="profile_image" src="img/profile_picture.png" alt="profile_image">
             <br>
             <h1>HOLA! SOY JESUS QUIROGA</h1>
-            <H2> PROGRAMMING STUDENT💻 || ENTREPENEUR 🚀 || GAMER 🕹️ </H2>
-            <p>Joven residente del estado de Puebla 🇲🇽 👦, autodidacta📚, apasionado por la tecnología y la música... 👨‍💻🎵</p>
+            <H2> PROGRAMMING STUDENT💻 || LAWYER ⚖️ || ENTREPENEUR 🚀 || GAMER 🕹️ </H2>
+            <p>Joven residente del estado de Puebla 🇲🇽 👦, autodidacta 📚, apasionado por la tecnología y la música... 👨‍💻🎵</p>
             <br>
             <ul class="networks">
                 <h3>REDES SOCIALES:</h3>
