SE ARREGLO LA ESTRUCTURA HTML Y LOS ESTILOS CSS

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <h5 class="card-title">Pagina web personal</h5>
                     <p class="card-text">En mi pagia personal se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
+                  <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
@@ -69,8 +70,9 @@
                     <h5 class="card-title">Tecnoplaza</h5>
                     <p class="card-text">Pagina para una tienda online en la cual se muestran
                         los servicion ofrecidos, imagenes y testimonios ademas de una seccion de contacto.
-                        Se utilizo HTML, CSS y Bootstrap</p>
+                        Se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
+                  <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
@@ -82,6 +84,7 @@
                     <p class="card-text">Pagina que emula la pagina principal de Google.
                         Se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
+                  <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
@@ -92,10 +95,10 @@
         <section class="social_media">
             <h2>MIS REDES:</h2>
             <div class="links_redes">
-                <a href="" class="img_redes" target="_blank">
+                <a href="https://www.linkedin.com/" class="img_redes" target="_blank">
                     <img src="img/linkedin.png" alt="linkedin">
                 </a>
-                <a href="" class="img_redes" target="_blank">
+                <a href="https://github.com/quirogajj" class="img_redes" target="_blank">
                     <img src="img/github.png" alt="github">
                 </a>
             </div>
@@ -109,7 +112,7 @@
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="https://github.com/quirogajj/portafolio_personal">Jesus Quiroga</a>
+            <a class="text-white" href="https://github.com/quirogajj">Jesus Quiroga</a>
         </div>
 
     <!--SCRIPTS BOOTSTRAP-->    
