SE AGREGARON ENLACES A LOS BOTONES DEL PORTFOLIO

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
                     <h5 class="card-title">Pagina web personal</h5>
                     <p class="card-text">En mi pagia personal se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
-                  <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
+                  <a href="https://github.com/quirogajj/portafolio_personal" target="_blank">
+                    <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
+                  </a>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
@@ -72,7 +74,9 @@
                         los servicion ofrecidos, imagenes y testimonios ademas de una seccion de contacto.
                         Se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
-                  <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
+                  <a href="https://github.com/quirogajj/tecnoplaza">
+                    <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
+                  </a>
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
@@ -84,7 +88,10 @@
                     <p class="card-text">Pagina que emula la pagina principal de Google.
                         Se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
-                  <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
+                  <a href="https://github.com/quirogajj/clongoogle">
+                    <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
+                  </a>
+                  
                   <div class="card-footer">
                     <small class="text-muted">Last updated 3 mins ago</small>
                   </div>
