SE CORRIGIERON DETALLES EN LA ESTRUCTURA

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         los servicion ofrecidos, imagenes y testimonios ademas de una seccion de contacto.
                         Se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
-                  <a href="https://github.com/quirogajj/tecnoplaza">
+                  <a href="https://github.com/quirogajj/tecnoplaza" target="_blank">
                     <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
                   </a>
                   <div class="card-footer">
@@ -88,7 +88,7 @@
                     <p class="card-text">Pagina que emula la pagina principal de Google.
                         Se utilizo HTML, CSS y Bootstrap.</p>
                   </div>
-                  <a href="https://github.com/quirogajj/clongoogle">
+                  <a href="https://github.com/quirogajj/clongoogle" target="_blank">
                     <button type="button" class="btn btn-outline-success">Ir al repositorio</button>
                   </a>
                   
@@ -119,7 +119,7 @@
 
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2022 Copyright:
-            <a class="text-white" href="https://github.com/quirogajj">Jesus Quiroga</a>
+            <a class="text-white" href="https://github.com/quirogajj" target="_blank">Jesus Quiroga</a>
         </div>
 
     <!--SCRIPTS BOOTSTRAP-->    
